--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Interaction</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>Your Website</h1>
+        <h1>Core 2 Interaction</h1>
     </header>
 
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
+        <a href="#Storytime">Storytime</a>
+        <a href="#Questionniare">Questionniare</a>
+        <a href="#Stories as network">Stories as network</a>
+        <a href="#Structure Analysis">Structure Analysis</a>
     </nav>
 
     <section>
-        <h2>Welcome to Our Website</h2>
-        <p>This is the home page content.</p>
+        
     </section>
 
 </body>
