--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Your Website</h1>
+         <h1>Core 2 Interaction</h1>
         <nav>
             <a href="#home">Home</a>
             <a href="#Storytime">Storytime</a>
