--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <header>
          <h1>Core 2 Interaction</h1>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#Storytime">Storytime</a>
-            <a href="#Questionniare">Questionniare</a>
-            <a href="#Stories as network">Stories as Network</a>
-            <a href="#Structure Analysis">Structure Analysis</a>
+            <a href="https://ishikabhatiaa.github.io/core2interaction/Home">Home</a>
+            <a href="https://ishikabhatiaa.github.io/core2interaction/Storytime">Storytime</a>
+            <a href="https://ishikabhatiaa.github.io/core2interaction/Questionnaire">Questionniare</a>
+            <a href="https://ishikabhatiaa.github.io/core2interaction/Stories as Network">Stories as Network</a>
+            <a href="https://ishikabhatiaa.github.io/core2interaction/Structure Analysis">Structure Analysis</a>
+            
         </nav>
     </header>
 
