--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
          <h1>Core 2 Interaction</h1>
         <nav>
-            <a href="https://ishikabhatiaa.github.io/core2interaction/Home">Home</a>
-            <a href="https://ishikabhatiaa.github.io/core2interaction/Storytime">Storytime</a>
-            <a href="https://ishikabhatiaa.github.io/core2interaction/Questionnaire">Questionniare</a>
-            <a href="https://ishikabhatiaa.github.io/core2interaction/Stories as Network">Stories as Network</a>
-            <a href="https://ishikabhatiaa.github.io/core2interaction/Structure Analysis">Structure Analysis</a>
+            <a href="/core2interaction/">Home</a>
+            <a href="/core2interaction/storyline/storyline.html">Storyline</a>
+            <a href="/core2interaction/questionnaire/questionnaire.html">Questionnaire</a>
+            <a href="/core2interaction/storiesasnetwork/page1.html">Stories as Network</a>
+            <a href="/core2interaction/StructureAnalysis/StructureAnalysis.html">Structure Analysis</a>
             
         </nav>
     </header>
