--- a/questionnaire/questionnaire.html
+++ b/questionnaire/questionnaire.html
@@ -128,7 +128,7 @@
 
     <h3>17. MUSICAL GENRE CLASSES </h3>
 
-    <p><a href="index.html">Back to Home</a></p>
+    <a href="../index.html">Back to Home</a>
     <main>
         <section>
             <div>
