--- a/storiesasnetwork/page1.html
+++ b/storiesasnetwork/page1.html
@@ -1,21 +1,18 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="row">
-          <div class="col s6 white-section">
-            <p class="center">White Section</p>
-          </div>
-          <div class="col s6 blue-section">
-            <p class="center">Blue Section</p>
-            <p class="center">On Beginnings</p>
-          </div>
-        </div>
-      </div>
+        <a href="arrow left.html" class="arrow left">&lt;</a>
+        <div class="rectangle black"></div>
+        <h1>ON BEGINNINGS</h1>
+        <div class="rectangle white"></div>
+        <h2>MARY RUEFLE</h2>
+        <a href="arrow right.html" class="arrow right">&gt;</a>
+    </div>
 </body>
 </html>
