--- a/storiesasnetwork/page1.html
+++ b/storiesasnetwork/page1.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <title>Bubbles</title>
 </head>
 <body>
-    <div class="container">
-        <a href="arrow left.html" class="arrow left">&lt;</a>
-        <div class="rectangle black"></div>
-        <h1>ON BEGINNINGS</h1>
-        <div class="rectangle white"></div>
-        <h2>MARY RUEFLE</h2>
-        <a href="arrow right.html" class="arrow right">&gt;</a>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
