--- a/storiesasnetwork/page1.html
+++ b/storiesasnetwork/page1.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Bubbles</title>
+    <title>Stories as Network</title>
 </head>
 <body>
+    <div class="black-half">
+        <div class="centered-content">
+            <h1>On Beginnings</h1>
+            <p>by Mary Ruefle</p>
+            <div class="scroll-down-arrows">
+                <i onclick="scrollToNextPage()"></i>
+            </div>
+        </div>
+    </div>
+
+    <div class="white-half">
+        <div class="centered-content">
+            <h3>In life, the number of beginnings is exactly equal to the number of endings: no one has yet to begin a life who will not end it. </h3>
+            <a href="/core2interaction/storiesasnetwork/page2/page2.html" class="next-button">Next</a>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
