--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header>
-         <h1>Core 2 Interaction</h1>
-        <nav>
+         <h1 class="fontstyle">Core 2 Interaction</h1>
+        <nav class="font-style">
             <a href="/core2interaction/">Home</a>
             <a href="/core2interaction/storyline/storyline.html">Storyline</a>
             <a href="/core2interaction/questionnaire/questionnaire.html">Questionnaire</a>
