--- a/storiesasnetwork/page4/page4.html
+++ b/storiesasnetwork/page4/page4.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../mainstyle.css">
     <title>Your Webpage</title>
 </head>
 <body>
-    <div class="content">
+    <div class="content font-style">
         <p>Everyone knows that if you query poets about how their poems begin, the answer is always the same: a phrase, a line, a scrap of language, a rhythm, an image, something seen, heard, witnessed, or imagined. And the lesson is always the same, and young poets recognize this to be one of the most important lessons they can learn: if you have any idea for a poem, an exact grid of intent, you are on the wrong path, a dead-end alley, at the top of a cliff you haven’t even climbed. This is a lesson that can only be learned by trial and error. 
 
             I believe many fine poems begin with ideas, but if you tell too many faces this, or tell it too loudly, they will get the wrong idea. 
@@ -18,6 +19,9 @@
             </p>
     </div>
     <a href="/core2interaction/storiesasnetwork/page5/page5.html" class="arrow-container">
+        <span class="arrow">&#10148;</span>
+    </a>
+    <a href="/core2interaction/storiesasnetwork/page3/page3.html" class="B-arrow-container">
         <span class="arrow">&#10148;</span>
     </a>
 </body>
