--- a/storiesasnetwork/page7/page7.html
+++ b/storiesasnetwork/page7/page7.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../mainstyle.css">
     <title>Your Webpage</title>
 </head>
-<body>
-    <div class="content">
-        <p>Barbara Henstein Smith, in her book Poetic Closure: A Study of How Poems End, says this: “Perhaps all we can say, and even this may be too much, is that varying degrees or states of tension seem to be involved in all our experiences, and that the most gratifying ones are those in which whatever tensions are created are also released. Or, to use another familiar set of terms, an experience is gratifying to the extent that those expectations that are aroused are also fulfilled.”
 
-            But there is no book I know of on the subject of how poems begin. How can the origin be traced when there is no form or shape that precedes it to trace? It is exactly like tracing the moment of the big bang—we can go back to a nanosecond before the beginning, before the universe burst into being, but we can’t go back to the precise beginning because that would precede knowledge, and we can’t “know” anything before “knowing” itself was born. 
-            
-            I have flipped through books, reading hundreds of opening and closing lines, across ages, across cultures, across aesthetic schools, and I have discovered that first lines are remarkably similar, even repeated, and that last lines are remarkably similar, even repeated. Of course in all cases they remain remarkably distinct, because the words belong to completely different poems. And i began to realize, reading these first and last lines, that there are not only the first and last lines of the lifelong sentence we each speak but also the first and last lines of the long piece of language delivered to use by others, by those we listen to. And in the best of all possible lives, that beginning and that end are the same: in poem after poem I encountered words that mark the first something made out of language that we hear as children repeated night after night, like a refrain: I love you. I am here with you. Don’t be afraid. Go to sleep now. And I encountered words that mark the last something made out of language that we hope to hear on earth: I love you. I am here with you. Don’t be afraid. Go to sleep now. 
-            
-            But it is growing damp and I must go in. Memory’s fog is rising. Among Emily Dickinson’s last words (in a letter). A woman whom everyone thought of as shut-in, homebound, cloistered, spoke as if she had been out, exploring the earth, her whole life, and it was finally time to go in. And it was.  
-            </p>
+<body>
+    <div class="content font-style">
+        <p>Barbara Henstein Smith, in her book Poetic Closure: A Study of How Poems End, says this: “Perhaps all we can
+            say, and even this may be too much, is that varying degrees or states of tension seem to be involved in all
+            our experiences, and that the most gratifying ones are those in which whatever tensions are created are also
+            released. Or, to use another familiar set of terms, an experience is gratifying to the extent that those
+            expectations that are aroused are also fulfilled.”
+
+            But there is no book I know of on the subject of how poems begin. How can the origin be traced when there is
+            no form or shape that precedes it to trace? It is exactly like tracing the moment of the big bang—we can go
+            back to a nanosecond before the beginning, before the universe burst into being, but we can’t go back to the
+            precise beginning because that would precede knowledge, and we can’t “know” anything before “knowing” itself
+            was born.
+
+            I have flipped through books, reading hundreds of opening and closing lines, across ages, across cultures,
+            across aesthetic schools, and I have discovered that first lines are remarkably similar, even repeated, and
+            that last lines are remarkably similar, even repeated. Of course in all cases they remain remarkably
+            distinct, because the words belong to completely different poems. And i began to realize, reading these
+            first and last lines, that there are not only the first and last lines of the lifelong sentence we each
+            speak but also the first and last lines of the long piece of language delivered to use by others, by those
+            we listen to. And in the best of all possible lives, that beginning and that end are the same: in poem after
+            poem I encountered words that mark the first something made out of language that we hear as children
+            repeated night after night, like a refrain: I love you. I am here with you. Don’t be afraid. Go to sleep
+            now. And I encountered words that mark the last something made out of language that we hope to hear on
+            earth: I love you. I am here with you. Don’t be afraid. Go to sleep now.
+
+            But it is growing damp and I must go in. Memory’s fog is rising. Among Emily Dickinson’s last words (in a
+            letter). A woman whom everyone thought of as shut-in, homebound, cloistered, spoke as if she had been out,
+            exploring the earth, her whole life, and it was finally time to go in. And it was.
+        </p>
     </div>
     </a>
+    <a href="/core2interaction/storiesasnetwork/page6/page6.html" class="B-arrow-container">
+        <span class="arrow">&#10148;</span>
+    </a>
 
-    <a href="/core2interaction/">Back to Home</a> 
+    <a href="/core2interaction/" class="bth">Back to Home</a>
 </body>
+
 </html>
