--- a/storiesasnetwork/page2/page2.html
+++ b/storiesasnetwork/page2/page2.html
@@ -14,7 +14,7 @@
 
             Paul Valéry, the French poet and thinker, once said that no poem is ever ended, that every poem is merely abandoned. This saying is also attributed to Stéphane Mallarmé, for where quotations begin is in a cloud. 
             
-            Paul Valéry also described his perception of first lines so vividly, and to my mind so accurately, that i have never forgotten it: the opening line of a poem, he said, is like finding a fruit on the ground, a piece of fallen fruit you have never seen before, and the poet’s task is to create the tre from which such a fruit would fall. 
+            Paul Valéry also described his perception of first lines so vividly, and to my mind so accurately, that i have never forgotten it: <br> the opening line of a poem, he said, is like finding a fruit on the ground, a piece of fallen fruit you have never seen before, and the poet’s task is to create the tre from which such a fruit would fall. 
             
             </p>
     </div>
