--- a/storiesasnetwork/page5/page5.html
+++ b/storiesasnetwork/page5/page5.html
@@ -13,27 +13,27 @@
     <div class="content font-style">
         <p>You might say a poem is a semicolon, a living semicolon, what connects the first line to the last, the act of
             keeping together that whose nature is to fly apart. Between the first and last lines there exists—a poem—and
-            if it were not for the poem that intervenes, the first and last lines of a poem would not speak to each
-            other.
+            if it were not for the poem that intervenes, <br> the first and last lines of a poem would not speak to each
+            other. 
 
             Would not speak to each other. Because the lines of a poem are speaking to each other, not you to them or
             they to you.
 
             I will tell you what I miss: I miss watching a movie and at the end, huge scrolled words come on the screen
-            and say: The End. I miss finishing a novel and there on the last page, at a discrete distance from the last
+            and say: The End. I miss finishing a novel and there on the last page, <br> at a discrete distance from the last
             words of the last sentence, are the dark letters spelling The End.
 
             It was its own thrill. I didn’t ignore them, I read them, even if only silently, with a deep sense of
             feeling: both the feeling of being replete, a feeling of satisfaction, and the feeling of loss, the sadness
             of having finished the book.
 
-            I have never, in my life, read a poem that ended with the words The End. Why is that, I wonder. I think
+            I have never, in my life, read a poem that ended with the words The End. Why is that, I wonder.<br>  I think
             perhaps the brevity of poems compared to novels makes one feel that there has been no great sustention of
             energy, no marathon worthy of pulling tape across the finish line. And then I found a poem of mine that I
-            had carefully written by hand in the sixth grade, and at the bottom of the page, in India ink, beautifully
+            had carefully written by hand in the sixth grade, and at the bottom of the page,<br>  in India ink, beautifully
             apart from the rest of the text, were the words The End. And I realized children very often denote the end
             because it is indeed a great achievement for them to have written anything, and they are completely unaware
-            of the number of stories and poems that have already been written; they know some, of course, but have not
+            of the number of stories and poems that have already been written; they know some, of course,<br> but have not
             yet found out the extent to which they are not the only persons residing on the planet. And so they sign
             their poems and stories like kings. Which is a wonderful thing.
 
