--- a/storiesasnetwork/page6/page6.html
+++ b/storiesasnetwork/page6/page6.html
@@ -16,19 +16,19 @@
             incongruent.
 
             Gaston Bachelard says the single most succinct and astonishing thing: We begin in admiration and we end by
-            organizing our disappointment. The moment of admiration is the experience of something unfiltered, vital and
+            organizing our disappointment. <br> The moment of admiration is the experience of something unfiltered, vital and
             fresh—it could also be horror—and the moment of organization is both the onset of disappointment and its
             dignification; the least we can do is dignify our knowingness, the loss of some vitality through
             familiarization, by admiring not the thing itself but how we can organize it, think about it.
 
-            I am afraid there is no way around this. It is the one try inevitable thing. And if you believe that, then
+            I am afraid there is no way around this. It is the one try inevitable thing. <br> And if you believe that, then
             you are conceding that in the beginning was the act, not the word.
 
             The painter Cy Twombly quotes John Crowe Ransom, on a scrap of paper: “The image cannot be disposed of a
             primordial freshness which ideas can never claim.”
 
             Easy and appropriate thing for a painter to say. Cy Twombly uses text in some of his drawings and paintings,
-            usually poetry, usually Dante. Many men and women have written long essays and lectures on the ideas they
+            usually poetry, usually Dante.<br> Many men and women have written long essays and lectures on the ideas they
             see expressed in Twombly’s work.
 
             Bachelard’s sentence simply says this: origins (beginnings) have consequences (endings).
