--- a/storiesasnetwork/page7/page7.html
+++ b/storiesasnetwork/page7/page7.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../mainstyle.css">
-    <title>Your Webpage</title>
+    <title>Network As Stories</title>
 </head>
 
 <body>
@@ -41,6 +41,9 @@
         </p>
     </div>
     </a>
+    <a href="/core2interaction/storiesasnetwork/page1.html" class="arrow-container">
+        <span class="arrow">&#10148;</span>
+
     <a href="/core2interaction/storiesasnetwork/page6/page6.html" class="B-arrow-container">
         <span class="arrow">&#10148;</span>
     </a>
