--- a/storiesasnetwork/page2/page2.html
+++ b/storiesasnetwork/page2/page2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../mainstyle.css">
     
-    <title>Your Webpage</title>
+    <title>Network As Stories</title>
 </head>
 <body>
     <div class="content font-style">
