--- a/storiesasnetwork/page6/page6.html
+++ b/storiesasnetwork/page6/page6.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../mainstyle.css">
-    <title>Your Webpage</title>
+    <title>Network As Stories</title>
 </head>
 
 <body>
