--- a/StructureAnalysis/StructureAnalysis.html
+++ b/StructureAnalysis/StructureAnalysis.html
@@ -23,7 +23,7 @@
 
     <section id="screenshot">
       <h2>Screenshot</h2>
-    <img src="screenshot.png" alt="website screenshot">
+    <img src="screenshot2.png" alt="website screenshot">
     <img src="Screenshot1.png" alt="website screenshot">
     </section>
 
@@ -32,7 +32,12 @@
       <div class="grid-col-2">
         <div>
           <pre id="analysis--simplified-html">
-          <!-- TODO: Replace with your version of a simplified structure -->
+           <div>
+           <div class="sticky-header-wrapper">
+            <main class="home-page"></main>
+            <div class="slick-slide"></div>
+            <img>
+           </div>
           </pre>
         </div>
         <div id="analysis--text">
