--- a/StructureAnalysis/StructureAnalysis.html
+++ b/StructureAnalysis/StructureAnalysis.html
@@ -26,18 +26,12 @@
     <img src="screenshot2.png" alt="website screenshot">
     <img src="Screenshot1.png" alt="website screenshot">
     </section>
-
     <section id="analysis">
       <h2>Analysis</h2>
       <div class="grid-col-2">
         <div>
           <pre id="analysis--simplified-html">
-           <div>
-           <div class="sticky-header-wrapper">
-            <main class="home-page"></main>
-            <div class="slick-slide"></div>
-            <img>
-           </div>
+          <!-- TODO: Replace with your version of a simplified structure -->
           </pre>
         </div>
         <div id="analysis--text">
