--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="/core2interaction/questionnaire/questionnaire.html">Questionnaire</a>
             <a href="/core2interaction/storiesasnetwork/page1.html">Stories as Network</a>
             <a href="/core2interaction/StructureAnalysis/StructureAnalysis.html">Structure Analysis</a>
-            
+            <a href="/core2interaction/ElasticCollection/ElasticCollection.html">Elastic Collection</a>
         </nav>
     </header>
 
