--- a/ElasticCollection/ElasticCollection.html
+++ b/ElasticCollection/ElasticCollection.html
@@ -7,19 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <img src="bag.png" alt="Closed Bag" id="bag" class="clickable">
-        <img src="bagopen.png" alt="open Bag" id="bag" class="clickable">
-
-        <div id="items" class="hidden">
-            <!-- Example item -->
-            <img src="path_to_item1.jpg" alt="Item 1" class="item clickable" data-description="This is item 1.">
-            <!-- Add more items similarly -->
-        </div>
-    </div>
-
-    <p id="description"></p>
-
+    <h1>WHAT'S IN MY BAG?</h1>
+    <div class="container" id="bag" style="background-image: url('bag.png');"></div>
     <script src="script.js"></script>
 </body>
 </html>
