--- a/ElasticCollection/ElasticCollection.html
+++ b/ElasticCollection/ElasticCollection.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What's in my bag</title>
+    <title>What's in My Bag?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WHAT'S IN MY BAG?</h1>
-    <div class="container" id="bag" style="background-image: url('bag.png');"></div>
-    <script src="script.js"></script>
+   
+    <a href="page1.html" style="text-decoration: none; color: inherit;"> 
+        <div class="bag">
+            <img src="bag.png" alt="Bag Image">
+            <h1>What's in my Bag?</h1>
+        </div>
+    </a>
 </body>
 </html>
