--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,19 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
-         <h1 class="fontstyle">Core 2 Interaction</h1>
+        <h1 class="fontstyle">Core 2 Interaction</h1>
         <nav class="font-style">
-            <a href="/core2interaction/">Home</a>
-            <a href="/core2interaction/storyline/storyline.html">Storyline</a>
-            <a href="/core2interaction/questionnaire/questionnaire.html">Questionnaire</a>
-            <a href="/core2interaction/storiesasnetwork/page1.html">Stories as Network</a>
-            <a href="/core2interaction/StructureAnalysis/StructureAnalysis.html">Structure Analysis</a>
-            <a href="/core2interaction/ElasticCollection/ElasticCollection.html">Elastic Collection</a>
+            <div class="nav-row">
+                <a href="/core2interaction/">Home</a>
+            </div>
+            <div class="nav-row">
+                <a href="/core2interaction/storyline/storyline.html">Storyline</a>
+                <a href="/core2interaction/questionnaire/questionnaire.html">Questionnaire</a>
+                <a href="/core2interaction/storiesasnetwork/page1.html">Stories as Network</a>
+            </div>
+            <div class="nav-row">
+                <a href="/core2interaction/StructureAnalysis/StructureAnalysis.html">Structure Analysis</a>
+                <a href="/core2interaction/ElasticCollection/ElasticCollection.html">Elastic Collection</a>
+                <a href="/core2interaction/DatainNYC/DatainNYC.html">Data in NYC</a>
+            </div>
         </nav>
     </header>
-
-    
 </body>
 </html>
