--- a/ElasticCollection/page1.html
+++ b/ElasticCollection/page1.html
@@ -10,9 +10,20 @@
 
 <body>
 
-    <div id="itemsGrid" class="items-grid"></div>
-    <script src="script.js"></script>
+    <div id="itemsGrid" class="items-grid">
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+
+                <img id="modal-img" src="" alt="">
+                <div id="modal-description"></div>
+                <span class="close-button">&times;</span>
+            </div>
+        </div>
+    </div>
+
+
     <button><a href="./ElasticCollection.html">Go back</a> </button>
+    <script src="script.js"></script>
 </body>
 
 </html>
