--- a/ElasticCollection/ElasticCollection.html
+++ b/ElasticCollection/ElasticCollection.html
@@ -6,7 +6,7 @@
     <title>What's in My Bag?</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="fontstyle">
    
     <a href="page1.html" style="text-decoration: none; color: inherit;"> 
         <div class="bag">
