--- a/ElasticCollection/page1.html
+++ b/ElasticCollection/page1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="fontstyle">
 
     <div id="itemsGrid" class="items-grid">
         <div id="myModal" class="modal">
@@ -16,6 +16,7 @@
 
                 <img id="modal-img" src="" alt="">
                 <div id="modal-description"></div>
+                <div id="modal-rating"></div>
                 <span class="close-button">&times;</span>
             </div>
         </div>
